objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Store_End_Date__c</fullName>
        <description>Store End date of content after which content will be deleted from the SFDC.</description>
        <label>Store End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ImageSource__c</fullName>
        <label>EUR TR Image Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POSM Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Brands__c</fullName>
        <inlineHelpText>This field identifies the Brand(s) for which this document is applicable.</inlineHelpText>
        <label>Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Avion</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Del Maguey</fullName>
                </value>
                <value>
                    <fullName>Green Spot</fullName>
                </value>
                <value>
                    <fullName>Hiram Walker</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Midleton</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Monkey 47</fullName>
                </value>
                <value>
                    <fullName>Olmeca Altos</fullName>
                </value>
                <value>
                    <fullName>Pernod</fullName>
                </value>
                <value>
                    <fullName>Plymouth</fullName>
                </value>
                <value>
                    <fullName>Powers</fullName>
                </value>
                <value>
                    <fullName>Redbreast</fullName>
                </value>
                <value>
                    <fullName>Ricard</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Scapa</fullName>
                </value>
                <value>
                    <fullName>Seagram&apos;s Gin</fullName>
                </value>
                <value>
                    <fullName>Smithworks</fullName>
                </value>
                <value>
                    <fullName>Smooth Ambler</fullName>
                </value>
                <value>
                    <fullName>Suze</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Yellow Spot</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Content_Type__c</fullName>
        <inlineHelpText>Larry, enter the type of content (e.g. Sell Sheet, Calendar, etc.) here please.</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Brand Standards</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Chains</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Help</fullName>
                </value>
                <value>
                    <fullName>Job Aids</fullName>
                </value>
                <value>
                    <fullName>KPI Standards</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Multicultural</fullName>
                </value>
                <value>
                    <fullName>Podcasts</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Priority Programs</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Quick Reads</fullName>
                </value>
                <value>
                    <fullName>Recipes</fullName>
                </value>
                <value>
                    <fullName>Sales Deck</fullName>
                </value>
                <value>
                    <fullName>Sell Sheets</fullName>
                </value>
                <value>
                    <fullName>Shelf Sets</fullName>
                </value>
                <value>
                    <fullName>Shopper Insights</fullName>
                </value>
                <value>
                    <fullName>Specs</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Other_Products__c</fullName>
        <label>Other Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Other Product</fullName>
                </value>
                <value>
                    <fullName>Acronyms</fullName>
                </value>
                <value>
                    <fullName>Brand Standards Level 2</fullName>
                </value>
                <value>
                    <fullName>Calendars</fullName>
                </value>
                <value>
                    <fullName>Killer Facts</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Vodka</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Rum</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Whiskey</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Scotch</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Tequila</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Gin</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Cordial</fullName>
                </value>
                <value>
                    <fullName>Insights: Champagne / Sparkling Wine</fullName>
                </value>
                <value>
                    <fullName>Insights: Still Wine</fullName>
                </value>
                <value>
                    <fullName>Insights: Fortified Wine</fullName>
                </value>
                <value>
                    <fullName>BarSmarts</fullName>
                </value>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Briefcase</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Line Management &amp; People Development</fullName>
                </value>
                <value>
                    <fullName>Off Premise</fullName>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Presentation Skills</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Selling Skills</fullName>
                </value>
                <value>
                    <fullName>Staff Training Toolkit</fullName>
                </value>
                <value>
                    <fullName>Systems &amp; Software</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>North CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Products__c</fullName>
        <inlineHelpText>This field identifies the Products or Sub-Brands to which this content is applicable.</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aberlour 12 YO Double Cask</fullName>
                </value>
                <value>
                    <fullName>Aberlour 16 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour 18 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour A&apos;Bunadh</fullName>
                </value>
                <value>
                    <fullName>Absolut 100</fullName>
                </value>
                <value>
                    <fullName>Absolut Apeach</fullName>
                </value>
                <value>
                    <fullName>Absolut Apple</fullName>
                </value>
                <value>
                    <fullName>Absolut Berri Acai</fullName>
                </value>
                <value>
                    <fullName>Absolut Cherrys</fullName>
                </value>
                <value>
                    <fullName>Absolut Chicago</fullName>
                </value>
                <value>
                    <fullName>Absolut Cilantro</fullName>
                </value>
                <value>
                    <fullName>Absolut Citron</fullName>
                </value>
                <value>
                    <fullName>Absolut Elyx</fullName>
                </value>
                <value>
                    <fullName>Absolut Family</fullName>
                </value>
                <value>
                    <fullName>Absolut Hibiskus</fullName>
                </value>
                <value>
                    <fullName>Absolut Kurant</fullName>
                </value>
                <value>
                    <fullName>Absolut Mandrin</fullName>
                </value>
                <value>
                    <fullName>Absolut Mango</fullName>
                </value>
                <value>
                    <fullName>Absolut Mexico</fullName>
                </value>
                <value>
                    <fullName>Absolut Pears</fullName>
                </value>
                <value>
                    <fullName>Absolut Peppar</fullName>
                </value>
                <value>
                    <fullName>Absolut Raspberri</fullName>
                </value>
                <value>
                    <fullName>Absolut Ruby Red</fullName>
                </value>
                <value>
                    <fullName>Absolut Texas</fullName>
                </value>
                <value>
                    <fullName>Absolut Vanilia</fullName>
                </value>
                <value>
                    <fullName>Absolut Vodka</fullName>
                </value>
                <value>
                    <fullName>Absolut Wild Tea</fullName>
                </value>
                <value>
                    <fullName>Artist Series</fullName>
                </value>
                <value>
                    <fullName>Avion Anejo</fullName>
                </value>
                <value>
                    <fullName>Avion Espresso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Spirits_Products__c</fullName>
        <label>Spirits Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Spirit Product</fullName>
                </value>
                <value>
                    <fullName>Aberlour Casg Annamh</fullName>
                </value>
                <value>
                    <fullName>Absolut America</fullName>
                </value>
                <value>
                    <fullName>Absolut Grape</fullName>
                </value>
                <value>
                    <fullName>Absolut Grapefruit</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal Extra</fullName>
                </value>
                <value>
                    <fullName>Chivas Ultis</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Albarradas</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Arroqueno</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Barril</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Chichicapa</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Crema</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Espadin Especial</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Iberico</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Madrecruixe</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Minero</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Pechuga</fullName>
                </value>
                <value>
                    <fullName>Del Maguey San Jose Rio Minas</fullName>
                </value>
                <value>
                    <fullName>Del Maguey San Luis Del Rio</fullName>
                </value>
                <value>
                    <fullName>Del Maguey San Luis del Rio Azul</fullName>
                </value>
                <value>
                    <fullName>Del Maguey San Pedro Taviche</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Tobala</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Tobala &amp; Espadin</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Vida</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Wild Papalome</fullName>
                </value>
                <value>
                    <fullName>Del Maguey Wild Tepextate</fullName>
                </value>
                <value>
                    <fullName>Founders Reserve</fullName>
                </value>
                <value>
                    <fullName>Glenlivet Guardians Chapter</fullName>
                </value>
                <value>
                    <fullName>Glenlivet Oloroso</fullName>
                </value>
                <value>
                    <fullName>Glenlivet Pullman 20th Century Ltd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Wines_Products__c</fullName>
        <label>Wines Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Wine Product</fullName>
                </value>
                <value>
                    <fullName>Sell Sheets &amp; Infographics</fullName>
                </value>
                <value>
                    <fullName>Accolades</fullName>
                </value>
                <value>
                    <fullName>Brand History &amp; Education</fullName>
                </value>
                <value>
                    <fullName>Product Specs</fullName>
                </value>
                <value>
                    <fullName>Images</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Pinot Grigio</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Pinot Noir</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Sauvignon Blanc</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Flight Song Pinot Grigio</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Flight Song Sauvignon Blanc</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Letter Series Letter B</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Letter Series Letter T</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Cava Brut Reserva</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Cava Brut Rose</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Gran Reserva</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Garnacha</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Reserva</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Tempranillo</fullName>
                </value>
                <value>
                    <fullName>Dead Bolt</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Blanc de Blancs</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Brut Rose</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Cordon Rouge</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Cuvee R Lalou</fullName>
                </value>
                <value>
                    <fullName>Graffigna Centernario Cabernet Sauvignon</fullName>
                </value>
                <value>
                    <fullName>Graffigna Centernario Elevation Red Blend</fullName>
                </value>
                <value>
                    <fullName>Graffigna Centernario Malbec</fullName>
                </value>
                <value>
                    <fullName>Graffigna Centernario Pinot Grigio</fullName>
                </value>
                <value>
                    <fullName>Graffigna Grand Reserve Cabernet Sauvignon</fullName>
                </value>
                <value>
                    <fullName>Graffigna Grand Reserve Malbec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aisle</fullName>
                </value>
                <value>
                    <fullName>Backbar</fullName>
                </value>
                <value>
                    <fullName>Cold Box</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>End Cap</fullName>
                </value>
                <value>
                    <fullName>Entrance</fullName>
                </value>
                <value>
                    <fullName>Exterior</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Objective_Creator_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective Plan</label>
        <referenceTo>gvp__Objective_Creator_Template__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Product_Name__c</fullName>
        <formula>BLANKVALUE(gvp__Label__r.Name, BLANKVALUE(gvp__Brand__r.Name, &apos;&apos;))</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Sticky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sticky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                    <default>true</default>
                    <label>Presentation</label>
                </value>
                <value>
                    <fullName>Brand Standards</fullName>
                </value>
                <value>
                    <fullName>Sell Sheet</fullName>
                </value>
                <value>
                    <fullName>Recipe Sheet</fullName>
                </value>
                <value>
                    <fullName>Shelf Talker</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>Media Related</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Corby_Digital_Assets</fullName>
        <active>true</active>
        <label>Corby Digital Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PR</fullName>
        <active>true</active>
        <label>EUR PR</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Spirits1</fullName>
        <active>true</active>
        <label>USA Spirits</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Media</fullName>
        <active>true</active>
        <description>Recordtype for all photo content</description>
        <label>Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Standard</fullName>
        <active>true</active>
        <description>Recordtype for all non-photo content</description>
        <label>Standard</label>
    </recordTypes>
</CustomObject>